[metadata]
name = ransuu
version = 0.1.0
description = Random number generation for Python
author = Christopher Vatcher
license = 
url = https://github.com/ransuu/ransuu
download_url = https://github.com/ransuu/ransuu/archive/ransuu.tar.gz
keywords = random, randomness, random bits, random numbers, sp800, sp800-90a
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Topic :: Security :: Cryptography

[options]
packages = find:
install_requires = cryptography
python_requires = >=3.6

